[build-system]
requires = [
    "setuptools",
    "matplotlib>=3.8.1",
    "numpy>=1.26.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "scoretree"
version = "0.0.0"
description = "Easy to use, multi-level grade weighting system"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10.0"
authors = [
    {name = "Paulo Sanchez", email = "dev.szblzpaulo@gmail.com"}
]
maintainers = [
    {name = "Paulo Sanchez", email = "dev.szblzpaulo@gmail.com"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/erlete/scoretree"
"Bug Tracker" = "https://github.com/erlete/scoretree/issues"
