[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "scoretree"
version = "1.0.0"
description = "Easy to use, multi-level grade weighting system"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10.0"
authors = [
    {name = "Paulo Sanchez", email = "dev.szblzpaulo@gmail.com"}
]
maintainers = [
    {name = "Paulo Sanchez", email = "dev.szblzpaulo@gmail.com"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

dependencies = [
    "colorama==0.4.6",
    "types-colorama==0.4.15.12"
]

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-html==4.1.1",
    "pycodestyle==2.11.1",
    "pydocstyle==6.3.0",
    "mypy==1.7.0",
    "flake8==6.1.0"
]

[project.urls]
"Homepage" = "https://github.com/erlete/scoretree"
"Bug Tracker" = "https://github.com/erlete/scoretree/issues"

[tool.pytest.ini_options]
testpaths = [
    "src/scoretree"
]
console_output_style = "progress"
log_level = 0
log_cli = true
addopts = [
    "--color=yes",
    "--capture=no",
    "--cov-config=.coveragerc",
    "--cov-report=html",
    "--cov=src/scoretree"
]
minversion = "7.4.2"
required_plugins = [
    "pytest-cov",
    "pytest-html"
]
